feat(web): Completed home page

--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Web site do Ecoleta" />
     <title>Ecoleta</title>
   </head>
-  <body class="layout">
+  <body>
     <noscript>Você precisa habilitar o Javascript para executar esta aplicação.</noscript>
-    <div id="main" class="layout-main"></div>
+    <div id="main"></div>
   </body>
 </html>
