--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#34cb79" />
     <meta name="description" content="Web site do Ecoleta" />
     <title>Ecoleta</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
   </head>
   <body>
     <noscript>Você precisa habilitar o Javascript para executar esta aplicação.</noscript>
